# RasPi-Camera-V2-KV260

./: Readme.md
devicetrees/: raspi-camera-v2-kv260-w8x1-hp0.dts  raspi-camera-v3-kv260-w8x1-hp0.dts
example/capture/: main.cpp
example/capture_hd/: CMakeLists.txt  main.cpp
example/opencv_v4l2/: CMakeLists.txt  example.cpp  example.h  v4ldevice.cpp  v4ldevice.h  v4ldevice_dmaheap.cpp
example/still/: main.cpp
example/still_hd/: CMakeLists.txt  main.cpp
fpga/raspi-camera-v2-w8x1-hp0/: create_project.tcl  design_1_bd_2023.1.tcl  design_1_bd_2023.2.tcl
fpga/raspi-camera-v3-w8x1-hp0/: Readme.md  design_1_bd_2023.1.tcl  design_1_bd_2023.2.tcl
kernel_module/: imx708.ko
tools/: capture_jpeg.sh  capture_raw.sh  setup.sh  setup_hd.sh
